# mcp-email-webdav-caldav

./: README.md  pyproject.toml
examples/: codex.installed.config.toml  codex.uvx.config.toml
src/mcp_email_webdav_caldav/: __main__.py  caldav_service.py  config.py  constants.py  email_service.py  server.py  webdav_service.py
tests/: test_caldav_service.py  test_config.py  test_email_service.py  test_server.py  test_webdav_service.py
